# IsaacTeleop

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  REUSE.toml
.github/workflows/: build-ubuntu.yml  build-windows.yml  cmake-target-layers.yaml  docs.yaml  sync-release-branches.yml  update-cmake-target-layers.yaml
client/: index.html
client/main/: 168.bundle.js  427.bundle.js  bundle.emulator.js.LICENSE.txt  bundle.js  index.html
client/release-1.0.x/: bundle.js  index.html
client/release-1.1.x/: bundle.js
client/release-1.3.x/: 544.bundle.js  bundle.js
client/release-1.4.x/: bundle.js  bundle.js.LICENSE.txt
client/stable/: index.html
client/v1.3.131/: index.html
cmake/: InstallPythonExample.cmake  cmake-structure.md  cmake-target-layers.md
current/: genindex.html  index.html  objects.inv  search.html  searchindex.js
current/_sources/: index.rst.txt
current/_static/: documentation_options.js
current/device/: add_device.html  body_tracking.html  haptic_feedback.html  haptikos.html  index.html  joint_space.html  manus.html  oak.html  trackers.html
current/getting_started/: build_from_source.html  contributing.html  quick_start.html  teleop_control_state_machine.html  teleop_session.html  televiz.html
current/overview/: architecture.html  ecosystem.html
current/references/: build.html  camera_streaming.html  egocentric_hand_reconstruction.html  license.html  mcap_record_replay.html  oob_teleop_control.html  requirements.html  retargeting.html
docs/source/: conf.py  index.rst
examples/camera_viz/: .gitignore  README.md  camera_streamer.py  camera_viz.py  camera_viz.sh  pyproject.toml
examples/camera_viz/configs/: dellwebcam.yaml  multi_camera.yaml  oakd.yaml  realsense.yaml  replay.yaml  synthetic.yaml  synthetic_xr_3up.yaml  v4l2.yaml  zed.yaml
examples/camera_viz/pipeline/: interface.py  runner.py
examples/camera_viz/placements/: __init__.py  lock_modes.py
examples/camera_viz/scripts/: _install_deps.sh
examples/camera_viz/sources/: __init__.py  _helpers.py  oakd.py  video_file.py  zed.py
examples/camera_viz/tests/: pyproject.toml  test_video_file_source.py
examples/camera_viz/transports/: __init__.py  _encoder_factory.py  rtp_h264_sender.py
examples/cloudxr_mujoco_teleop/: README.md  pyproject.toml  visualize_hands_mujoco_example.py  visualize_poses_mujoco_example.py
examples/deviceio_live_view/: CMakeLists.txt
examples/deviceio_live_view/python/: deviceio_viser.py  live_deviceio.py  pyproject.toml
examples/lerobot/: record.py
examples/schemaio/: CMakeLists.txt  se3_printer.cpp
examples/teleop_ros2/: AGENTS.md  CMakeLists.txt  Dockerfile  README.md
examples/teleop_ros2/python/: constants.py  geometry.py  messages.py  node_parameters.py  pyproject.toml  session_config.py  teleop_profiles.py  teleop_ros2_node.py
examples/teleop_ros2/python/integration_tests/: __init__.py  teleop_ros2_topic_verifier.py
examples/teleop_ros2/python/tests/: test_geometry.py  test_messages.py  test_teleop_profiles.py
examples/teleop_ros2/teleop_ros2_interfaces/: CMakeLists.txt  package.xml
examples/teleop_ros2/teleop_ros2_interfaces/msg/: NamedPoseArray.msg
examples/televiz/video_smoke/: CMakeLists.txt  README.md  main.cpp  nvdec_player.cpp  nvdec_player.cu  nvdec_player.hpp
examples/televiz/xr_smoke/: CMakeLists.txt  main.cpp
main/: genindex.html  index.html  search.html  searchindex.js
main/device/: add_device.html  body_tracking.html  haptic_feedback.html  haptikos.html  index.html  joint_space.html  manus.html  oak.html  trackers.html
main/getting_started/: contributing.html  quick_start.html  teleop_control_state_machine.html  teleop_session.html  televiz.html
main/overview/: architecture.html  ecosystem.html
main/references/: build.html  camera_streaming.html  egocentric_hand_reconstruction.html  license.html  mcap_record_replay.html  oob_teleop_control.html  requirements.html  retargeting.html
preview/pr-203/: genindex.html  index.html  search.html  searchindex.js
preview/pr-460/: genindex.html  index.html  search.html  searchindex.js
preview/pr-461/: genindex.html  index.html  search.html  searchindex.js
preview/pr-464/: genindex.html  index.html  search.html  searchindex.js
preview/pr-465/: genindex.html  index.html  search.html
preview/pr-496/: index.html  (+4 more)
scripts/: check_lfs_pointers.py  cmake_target_layers.py
src/core/pusherio/: CMakeLists.txt
src/core/pusherio/python/: CMakeLists.txt  pusherio_bindings.cpp  pusherio_init.py
src/core/schema/python/: CMakeLists.txt  exo_arms_bindings.h  haptic_command_bindings.h  schema_init.py  schema_module.cpp  se3_tracker_bindings.h
src/core/schema_tests/cpp/: CMakeLists.txt  test_se3_tracker.cpp
src/plugins/controller_se3_tracker/: CMakeLists.txt  README.md  controller_se3_tracker_plugin.cpp  controller_se3_tracker_plugin.hpp  main.cpp  plugin.yaml
src/plugins/exoskeleton/: CMakeLists.txt  README.md  exoskeleton_plugin.py  plugin.yaml
src/plugins/manus/core/: CMakeLists.txt  manus_hand_tracking_plugin.cpp
src/plugins/manus/core/inc/manus/: manus_glove_collection.hpp  manus_hand_tracking_plugin.hpp
src/plugins/oak/: CMakeLists.txt  README.md
src/plugins/oak/core/: oak_camera.cpp  oak_camera.hpp  preview_stream.cpp  preview_stream.hpp
src/plugins/rebot_devarm_leader/: CMakeLists.txt  README.md  damiao_bus.cpp  damiao_bus.hpp  main.cpp  plugin.yaml  rebot_devarm_leader_plugin.cpp  rebot_devarm_leader_plugin.hpp
src/viz/core_tests/cpp/: CMakeLists.txt  test_vk_hpp.cpp
src/viz/session_tests/cpp/: CMakeLists.txt  test_perf_audit.cpp  test_viz_session.cpp  test_window_primitives.cpp
src/viz/xr_tests/cpp/: CMakeLists.txt  test_openxr_session.cpp  test_xr_runtime.cpp
v1.0.191/: genindex.html  index.html  search.html  searchindex.js
v1.0.193/: genindex.html  index.html  search.html
v1.1.5/: genindex.html  index.html  objects.inv  search.html  searchindex.js
v1.1.8/: genindex.html  index.html  search.html
v1.3.131/: genindex.html  index.html  objects.inv  search.html
(+1001 files in other folders)
