# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Standalone pyproject for camera_viz so `uv run` resolves the example's
# deps without polluting the IsaacTeleop wheel's runtime requirements.
# isaacteleop (which bundles Televiz) is installed from PyPI by default by
# ``camera_viz.sh setup``; pass ``setup --wheel <path>`` to use a locally
# built wheel instead.

[project]
name = "camera-viz"
version = "0.0.0"
description = "Televiz camera-feed visualizer"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyyaml>=6.0",
    "cupy-cuda12x",
    # numpy + scipy power the placement-strategy math (quaternion ops via
    # scipy.spatial.transform.Rotation). Already in IsaacTeleop's
    # retargeters extra, so deploy boxes already have them.
    "numpy>=1.23",
    "scipy>=1.15",
]

# Vendor-SDK deps are optional. ``./camera_viz.sh setup`` installs all
# extras by default; pass ``--no-<extra>`` to skip.
[project.optional-dependencies]
v4l2 = ["opencv-python>=4.5"]
oakd = ["depthai>=3.0"]
# pyzed isn't on PyPI — the ZED SDK's bundled ``get_python_api.py``
# produces a Python-version-specific wheel. ``camera_viz.sh setup --with-zed``
# runs that and installs the result.
rtp = [
    # GStreamer is consumed via system python3-gi + python3-gst-1.0 (the
    # setup script apt-installs them and uses --system-site-packages),
    # not pip — PyGObject from PyPI requires a source-build with cairo
    # + girepository dev headers. pybind11 stays in the venv as a build-
    # time dep for the codec at ./codec/.
    "pybind11>=2.11",
]

# Native NVENC/NVDEC codec lives in ./codec/. Build with
# ``codec/build.sh``; ``./camera_viz.sh setup`` does this automatically.
# Requires CUDA toolkit + NVIDIA driver (libnvidia-encode + libnvcuvid).

[tool.uv]
python-preference = "only-managed"
