<?xml version="1.0"?>
<!--
SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
SPDX-License-Identifier: Apache-2.0
-->
<package format="3">
  <name>teleop_ros2_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS 2 interfaces for Isaac Teleop.</description>
  <maintainer email="sgrizan@nvidia.com">Sergey Grizan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
